--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
 - bundle exec rake db:migrate --trace
 - RAILS_ENV=test bundle exec rake db:migrate --trace
 - bundle exec rake db:test:prepare
+- bundle exec rake db:migrate RAILS_ENV=test
 - bundle exec rspec -fd spec/
 deploy:
   api_key:
