--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ rvm:
 - 2.2.6
 gemfile:
 - Gemfile.travis
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
 - bundle exec rake db:migrate --trace
 - RAILS_ENV=test bundle exec rake db:migrate --trace
